--- a/index.html
+++ b/index.html
@@ -8,7 +8,35 @@
     <title>Code Quiz</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+        <h3>View high scores</h3>
+        <h3>timer</h3>
+        </nav>
+    </header>
+<div class="start-page" id="start-page">
+    <h2>Coding Quiz Challenge</h2>
+    <p>Try to answer the following code-related questions within the time limit. 
+        Keep in mind the incorrect answer will penalize your score/time by ten seconds!
+   </p>
+    <button type="submit" id="start-q">Start Quiz</button>
+</div>
+
+<div class="main-container">
+    <h2 class="question">Coding Quiz Challenge</h2>
+    <p>Try to answer the following code-related questions within the time limit. 
+         Keep in mind the incorrect answer will penalize your score/time by ten seconds!
+    </p>
+    <h2 id="question">questionTextEl goes here</h2>
+    <ul>
+        <li id="a">answer a</li>
+        <li id="b">answer b</li>
+        <li id="c">answer c</li>
+        <li id="d">answer d</li>
+    </ul>
+</div>
+
+
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
