added all questions to the array. need to figure out function to loop through questions based on user input

--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
     <button type="submit" id="start-q">Start Quiz</button>
 </div>
 
-<div class="main-container">
-    <h2 class="question">Coding Quiz Challenge</h2>
-    <p>Try to answer the following code-related questions within the time limit. 
-         Keep in mind the incorrect answer will penalize your score/time by ten seconds!
-    </p>
+<div class="main-container" id="main-container">
     <h2 id="question">questionTextEl goes here</h2>
     <ul>
         <li id="a">answer a</li>
