need to work on checkAnswer function

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <li id="d">answer d</li>
     </ul>
 </div>
+<div class="comments" id="comments">
+</div>
 
 
     <script src="./assets/js/script.js"></script>
